--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    
+
+    <button class="App-explanation-button" onClick="handleInstructionClick()">Instructions</button>
+    <p class="App-explanation" id="instructions"></p>
+
       <h1 id="rollTotal">Total Successes:</h1>
       
       <button class="DiceRoller-button" onClick='handleRollClick(1)'>1d</button>
